feat: phase c p2 full stack
